--- a/i18n/ca.json
+++ b/i18n/ca.json
@@ -256,6 +256,9 @@
     "import.mode": "Mode",
     "import.overwrite": "Vols sobreescriure?",
     "import.overwriteHelp": "Vols sobreescriure el nom, els atributs i l'estat de la subscripció dels subscriptors existents?",
+    "import.merge": "Fusionar?",
+    "import.mergeHelp": "Fusionar els atributs dels subscriptors existents?",
+    "import.mergeOverwriteConflict": "La fusió no està permesa si la substitució està activada.",
     "import.recordsCount": "{num} / {total} registres",
     "import.stopImport": "Atura la importació",
     "import.subscribe": "Subscriu",
