--- a/i18n/cs-cz.json
+++ b/i18n/cs-cz.json
@@ -256,6 +256,9 @@
     "import.mode": "Režim",
     "import.overwrite": "Přepsat?",
     "import.overwriteHelp": "Přepsat jméno, atributy, stav odběru existujících odběratelů?",
+    "import.merge": "Sloučit?",
+    "import.mergeHelp": "Sloučit atributy stávajících odběratelů?",
+    "import.mergeOverwriteConflict": "Sloučení není povoleno, pokud je přepisování nastaveno na True.",
     "import.recordsCount": "{num} / {total} záznamů",
     "import.stopImport": "Zastavit import ",
     "import.subscribe": "Odebírat",
