--- a/i18n/cy.json
+++ b/i18n/cy.json
@@ -256,6 +256,9 @@
     "import.mode": "Modd",
     "import.overwrite": "Disodli?",
     "import.overwriteHelp": "Disodli enw",
+    "import.merge": "Cyfuno?",
+    "import.mergeHelp": "Cyfuno priodoleddau y tanysgrifwyr presennol?",
+    "import.mergeOverwriteConflict": "Nid yw cyfuno yn cael ei ganiatáu os yw gosod gosod i Wir.",
     "import.recordsCount": "{num} / {total} cofnod",
     "import.stopImport": "Rhoi'r gorau i fewngludo",
     "import.subscribe": "Tanysgrifio",
