--- a/i18n/da.json
+++ b/i18n/da.json
@@ -256,6 +256,9 @@
     "import.mode": "Tilstand",
     "import.overwrite": "Overskriv?",
     "import.overwriteHelp": "Overskriv navn, egenskab, abonnementsstatus for eksisterende abonnenter?",
+    "import.merge": "Flette?",
+    "import.mergeHelp": "Skal attributterne for eksisterende abonnenter flettes?",
+    "import.mergeOverwriteConflict": "Fletning er ikke tilladt, hvis overskrivning er angivet som sand.",
     "import.recordsCount": "{num} / {total} poster",
     "import.stopImport": "Stop importen",
     "import.subscribe": "Abonnér",
