--- a/i18n/de.json
+++ b/i18n/de.json
@@ -256,6 +256,9 @@
     "import.mode": "Modus",
     "import.overwrite": "Überschreiben?",
     "import.overwriteHelp": "Überschreibe Name, Attribute und Abonnement-Status von bestehenden Abonnenten?",
+    "import.merge": "Zusammenführen?",
+    "import.mergeHelp": "Attribute vorhandener Abonnenten zusammenführen?",
+    "import.mergeOverwriteConflict": "Das Zusammenführen ist nicht erlaubt, wenn Überschreiben auf True gesetzt ist.",
     "import.recordsCount": "{num} / {total} Einträge",
     "import.stopImport": "Import stoppen",
     "import.subscribe": "Abonnieren",
