--- a/i18n/el.json
+++ b/i18n/el.json
@@ -256,6 +256,9 @@
     "import.mode": "Τρόπος λειτουργίας",
     "import.overwrite": "Αντικατάσταση;",
     "import.overwriteHelp": "Αντικατάσταση ονόματος, χαρακτηριστικών, κατάστασης εγγραφής των υφιστάμενων συνδρομητών;",
+    "import.merge": "Συγχώνευση;",
+    "import.mergeHelp": "Συγχώνευση χαρακτηριστικών των υπαρχόντων συνδρομητών;",
+    "import.mergeOverwriteConflict": "Η συγχώνευση δεν επιτρέπεται εάν η αντικατάσταση έχει οριστεί σε True.",
     "import.recordsCount": "{num} / {total} εγγραφές",
     "import.stopImport": "Διακοπή εισαγωγής",
     "import.subscribe": "Εγγραφή",
