--- a/i18n/es.json
+++ b/i18n/es.json
@@ -257,6 +257,9 @@
     "import.mode": "Modo",
     "import.overwrite": "¿Sobrescribir?",
     "import.overwriteHelp": "¿Sobrescribir nombre y atributos de suscriptores existentes?",
+    "import.merge": "¿Combinar?",
+    "import.mergeHelp": "¿Combinar atributos de suscriptores existentes?",
+    "import.mergeOverwriteConflict": "La combinación no está permitida si la opción de sobrescribir está establecida en Verdadero.",
     "import.recordsCount": "{num} de {total} registros",
     "import.stopImport": "Detener importación",
     "import.subscribe": "Suscribir",
