--- a/i18n/fi.json
+++ b/i18n/fi.json
@@ -257,6 +257,9 @@
     "import.mode": "Tila",
     "import.overwrite": "Ylikirjoita?",
     "import.overwriteHelp": "Ylikirjoitetaanko olemassa olevien tilaajien nimi, attribuutit ja tilaustila?",
+    "import.merge": "Yhdistä?",
+    "import.mergeHelp": "Yhdistetäänkö olemassa olevien tilaajien ominaisuudet?",
+    "import.mergeOverwriteConflict": "Yhdistäminen ei ole sallittua, jos ylikirjoitusasetus on asetettu todeksi.",
     "import.recordsCount": "{num} / {total} tietuetta",
     "import.stopImport": "Pysäytä tuonti",
     "import.subscribe": "Tilaa",
