--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -257,6 +257,9 @@
     "import.mode": "Mode",
     "import.overwrite": "Écraser ?",
     "import.overwriteHelp": "Remplacer le nom et les attributs des abonné·es existant·es ?",
+    "import.merge": "Fusionner ?",
+    "import.mergeHelp": "Fusionner les attributs des abonnés existants ?",
+    "import.mergeOverwriteConflict": "La fusion n'est pas autorisée si l'écrasement est défini sur True.",
     "import.recordsCount": "{num} / {total} contacts importés",
     "import.stopImport": "Arrêter l'importation",
     "import.subscribe": "S'abonner",
