--- a/i18n/he.json
+++ b/i18n/he.json
@@ -256,6 +256,9 @@
     "import.mode": "מצב",
     "import.overwrite": "להחליף?",
     "import.overwriteHelp": "לדרוס שמות, מאפיינים, ומצבי מינוי של המנויים הקיימים?",
+    "import.merge": "מיזוג?",
+    "import.mergeHelp": "למזג מאפיינים של מנויים קיימים?",
+    "import.mergeOverwriteConflict": "אין לאפשר מיזוג כאשר הרשות לדריסה מוגדרת לנכון.",
     "import.recordsCount": "{num} / {total} רשומות",
     "import.stopImport": "עצור ייבוא",
     "import.subscribe": "הירשם",
