--- a/i18n/hu.json
+++ b/i18n/hu.json
@@ -256,6 +256,9 @@
     "import.mode": "Mód",
     "import.overwrite": "Felülír?",
     "import.overwriteHelp": "Felülírja a meglévő előfizetők nevét, attribútumait és feliratkozási állapotát?",
+    "import.merge": "Összeolvadás?",
+    "import.mergeHelp": "Összeolvadás a meglévő feliratkozók tulajdonságaival?",
+    "import.mergeOverwriteConflict": "Az összeolvadás nem engedélyezett, ha a felülírás igazra van állítva.",
     "import.recordsCount": "{num} / {total} rekord",
     "import.stopImport": "Importálás leállítása",
     "import.subscribe": "Feliratkozás",
