--- a/i18n/it.json
+++ b/i18n/it.json
@@ -256,6 +256,9 @@
     "import.mode": "Modalità",
     "import.overwrite": "Sovrascrivere?",
     "import.overwriteHelp": "Sostituire il nome e gli attributi degli iscritti esistenti?",
+    "import.merge": "Fondere?",
+    "import.mergeHelp": "Fondere gli attributi degli abbonati esistenti?",
+    "import.mergeOverwriteConflict": "La fusione non è consentita se sovrascrivi è impostato su True.",
     "import.recordsCount": "{num} / {total} salvataggi",
     "import.stopImport": "Interrompere l'importazione",
     "import.subscribe": "Iscriversi",
