--- a/i18n/jp.json
+++ b/i18n/jp.json
@@ -257,6 +257,9 @@
     "import.mode": "モード",
     "import.overwrite": "上書きしますか?",
     "import.overwriteHelp": "既存の加入者の名前、アトリビュート、サブスクリプションステータスを上書きしますか？",
+    "import.merge": "マージしますか？",
+    "import.mergeHelp": "既存の購読者の属性をマージしますか？",
+    "import.mergeOverwriteConflict": "上書きがTrueに設定されている場合、マージは許可されません。",
     "import.recordsCount": "{num} / {total} 記録",
     "import.stopImport": "インポートを中止",
     "import.subscribe": "加入",
