--- a/i18n/ml.json
+++ b/i18n/ml.json
@@ -256,6 +256,9 @@
     "import.mode": "ശൈലി",
     "import.overwrite": "തിരുത്തിയെഴുതട്ടേ?",
     "import.overwriteHelp": "നിലവിലുള്ള വരിക്കാരുടെ പേരും മറ്റുവിവരങ്ങളും തിരുത്തിയെഴുതട്ടേ?",
+    "import.merge": "അടയ്ക്കുക?",
+    "import.mergeHelp": "നിലവിലെ സബ്സ്‌ക്രൈബേഴ്സിന്റെ ഗുണങ്ങളെ അടയ്ക്കാം?",
+    "import.mergeOverwriteConflict": "ഓവർറൈറ്റ് സജ്ജമാക്കുക്കുന്നതിൽ മെർജ് അനുവദനീയമല്ല.",
     "import.recordsCount": "{num} / {total} രേഖകള്‍",
     "import.stopImport": "ഇംപോർട്ട് നിർത്തുക",
     "import.subscribe": "വരിക്കാരാകുക",
