--- a/i18n/nl.json
+++ b/i18n/nl.json
@@ -256,6 +256,9 @@
     "import.mode": "Modus",
     "import.overwrite": "Overscrijven?",
     "import.overwriteHelp": "Naam, attributen, inschrijvingsstatus van bestaande abonnees overschrijven?",
+    "import.merge": "Samenvoegen?",
+    "import.mergeHelp": "Attributen samenvoegen van bestaande abonnees?",
+    "import.mergeOverwriteConflict": "Samenvoegen is niet toegestaan als overschrijven is ingesteld op True.",
     "import.recordsCount": "{num} / {total} records",
     "import.stopImport": "Stop importeren",
     "import.subscribe": "Inschrijven",
