--- a/i18n/pl.json
+++ b/i18n/pl.json
@@ -256,6 +256,9 @@
     "import.mode": "Tryb",
     "import.overwrite": "Nadpisać?",
     "import.overwriteHelp": "Nadpisać nazwy i atrybuty istniejących subskrybentów?",
+    "import.merge": "Połączyć?",
+    "import.mergeHelp": "Połączyć atrybuty istniejących subskrybentów?",
+    "import.mergeOverwriteConflict": "Połączenie nie jest dozwolone, jeśli ustawiono nadpisywanie na prawdę.",
     "import.recordsCount": "{num} / {total} rekordów",
     "import.stopImport": "Zatrzymaj import",
     "import.subscribe": "Subskrypcje",
