--- a/i18n/pt-BR.json
+++ b/i18n/pt-BR.json
@@ -256,6 +256,9 @@
     "import.mode": "Modo",
     "import.overwrite": "Sobrescrever?",
     "import.overwriteHelp": "Sobrescrever nome e atributos de inscritos existentes?",
+    "import.merge": "Mesclar?",
+    "import.mergeHelp": "Mesclar atributos dos assinantes existentes?",
+    "import.mergeOverwriteConflict": "A mesclagem não é permitida se a substituição estiver definida como Verdadeira.",
     "import.recordsCount": "{num} / {total} registros",
     "import.stopImport": "Parar importação",
     "import.subscribe": "Inscrever",
