--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -256,6 +256,9 @@
     "import.mode": "Modo",
     "import.overwrite": "Sobrescrever?",
     "import.overwriteHelp": "Sobrescrever nome e atributos de subscritores existentes?",
+    "import.merge": "Mesclar?",
+    "import.mergeHelp": "Mesclar atributos de assinantes existentes?",
+    "import.mergeOverwriteConflict": "A mesclagem não é permitida se a substituição estiver definida como Verdadeira.",
     "import.recordsCount": "{num} / {total} registos",
     "import.stopImport": "Parar importação",
     "import.subscribe": "Subscrever",
