--- a/i18n/ro.json
+++ b/i18n/ro.json
@@ -257,6 +257,9 @@
     "import.mode": "Mod",
     "import.overwrite": "Suprascrie?",
     "import.overwriteHelp": "Suprascrieți numele, attribs, starea abonamentului abonaților existenți?",
+    "import.merge": "Unire?",
+    "import.mergeHelp": "Unirea atributelor abonaților existenți?",
+    "import.mergeOverwriteConflict": "Unirea nu este permisă dacă suprascrierea este setată la True.",
     "import.recordsCount": "{num} / înregistrări {total}",
     "import.stopImport": "Importă",
     "import.subscribe": "Abonare",
