--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -256,6 +256,9 @@
     "import.mode": "Режим",
     "import.overwrite": "Перезаписать?",
     "import.overwriteHelp": "Перезаписать имя или атрибуты существующих подписчиков?",
+    "import.merge": "Объединить?",
+    "import.mergeHelp": "Объединить атрибуты существующих подписчиков?",
+    "import.mergeOverwriteConflict": "Объединение не разрешено, если установлен параметр перезаписи (overwrite) в True.",
     "import.recordsCount": "{num} / {total} записей",
     "import.stopImport": "Остановить импорт",
     "import.subscribe": "Подписаться",
