--- a/i18n/se.json
+++ b/i18n/se.json
@@ -256,6 +256,9 @@
     "import.mode": "Läge",
     "import.overwrite": "Skriv över?",
     "import.overwriteHelp": "Ska namn, attribut och prenumerationsstatus skrivas över för befintliga prenumeranter?",
+    "import.merge": "Sammanfoga?",
+    "import.mergeHelp": "Sammanfoga attribut för befintliga prenumeranter?",
+    "import.mergeOverwriteConflict": "Sammanfogning är inte tillåtet om overwrite är inställt på True.",
     "import.recordsCount": "{num} / {total} poster",
     "import.stopImport": "Stoppa import",
     "import.subscribe": "Prenumerera",
