--- a/i18n/sk.json
+++ b/i18n/sk.json
@@ -256,6 +256,9 @@
     "import.mode": "Režim",
     "import.overwrite": "Prepísať?",
     "import.overwriteHelp": "Prepísať meno, atribúty, stav odberu existujúcich odberateľov?",
+    "import.merge": "Sloučit?",
+    "import.mergeHelp": "Sloučit atributy existujících odběratelů?",
+    "import.mergeOverwriteConflict": "Sloučení není povoleno, pokud je přepsání nastaveno na True.",
     "import.recordsCount": "{num} / {total} záznamov",
     "import.stopImport": "Zastaviť import ",
     "import.subscribe": "Odoberať",
