--- a/i18n/sl.json
+++ b/i18n/sl.json
@@ -256,6 +256,9 @@
     "import.mode": "Način",
     "import.overwrite": "Prepisati?",
     "import.overwriteHelp": "Prepisati ime, atribute, stanje naročnine obstoječih naročnikov?",
+    "import.merge": "Združi?",
+    "import.mergeHelp": "Združi atribute obstoječih naročnikov?",
+    "import.mergeOverwriteConflict": "Združevanje ni dovoljeno, če je nastavljeno prepisovanje na True.",
     "import.recordsCount": "{num} / {total} zapisov",
     "import.stopImport": "Ustavi uvoz",
     "import.subscribe": "Naročite se",
