--- a/i18n/tr.json
+++ b/i18n/tr.json
@@ -257,6 +257,9 @@
     "import.mode": "Mod",
     "import.overwrite": "Üzerine yaz?",
     "import.overwriteHelp": "İsim ve attribs parametrelerini var olan üyelerin üzerine yaz?",
+    "import.merge": "Birleştirme?",
+    "import.mergeHelp": "Mevcut abonelerin özelliklerini birleştirin mi?",
+    "import.mergeOverwriteConflict": "Eğer üzerine yazma True olarak ayarlanmışsa birleştirme izin verilmez.",
     "import.recordsCount": "{num} / {total} kayıt",
     "import.stopImport": "İçeri aktarmayı durdur",
     "import.subscribe": "Üye ol",
