--- a/i18n/uk.json
+++ b/i18n/uk.json
@@ -256,6 +256,9 @@
     "import.mode": "Режим",
     "import.overwrite": "Замінити",
     "import.overwriteHelp": "Замінити імена, властивості й стани підписок чинних підписни_ць.",
+    "import.merge": "Об'єднати?",
+    "import.mergeHelp": "Об'єднати атрибути існуючих підписників?",
+    "import.mergeOverwriteConflict": "Об'єднання не дозволяється, якщо параметр перезапису встановлено на true.",
     "import.recordsCount": "{num} / {total} записів",
     "import.stopImport": "Перервати імпорт",
     "import.subscribe": "Підписка",
