--- a/i18n/vi.json
+++ b/i18n/vi.json
@@ -257,6 +257,9 @@
     "import.mode": "Chế độ",
     "import.overwrite": "Ghi đè?",
     "import.overwriteHelp": "Ghi đè tên, tiêu chí, trạng thái đăng ký của các thuê bao hiện có?",
+    "import.merge": "Gộp?",
+    "import.mergeHelp": "Gộp các thuộc tính của các người đăng ký hiện có?",
+    "import.mergeOverwriteConflict": "Không thể gộp nếu việc ghi đè được thiết lập thành Đúng.",
     "import.recordsCount": "{num} / {total} Hồ sơ",
     "import.stopImport": "Dừng nhập",
     "import.subscribe": "Đặt mua",
