--- a/i18n/zh-CN.json
+++ b/i18n/zh-CN.json
@@ -256,6 +256,9 @@
     "import.mode": "模式",
     "import.overwrite": "覆盖 ？",
     "import.overwriteHelp": "覆盖现有订阅者的名称、属性、订阅状态？",
+    "import.merge": "合并？",
+    "import.mergeHelp": "合并现有订阅者的属性？",
+    "import.mergeOverwriteConflict": "如果覆盖设置为 True，则不允许合并。",
     "import.recordsCount": "{num} / {total} 条记录",
     "import.stopImport": "停止导入",
     "import.subscribe": "订阅",
