--- a/i18n/zh-TW.json
+++ b/i18n/zh-TW.json
@@ -257,6 +257,9 @@
     "import.mode": "模式",
     "import.overwrite": "覆蓋？",
     "import.overwriteHelp": "覆蓋現有訂閱者的名稱、屬性、訂閱狀態？",
+    "import.merge": "合并？",
+    "import.mergeHelp": "合并现有订阅者的属性？",
+    "import.mergeOverwriteConflict": "如果覆盖设置为 True，则不允许合并。",
     "import.recordsCount": "{num} / {total} 條記錄",
     "import.stopImport": "停止導入",
     "import.subscribe": "訂閱",
